[gd_scene load_steps=12 format=3 uid="uid://cqe7xck526txi"]

[ext_resource type="Script" path="res://rooms/room17.gd" id="1_as08b"]
[ext_resource type="TileSet" uid="uid://vusutmqak5xg" path="res://rooms/dungeon_tileset.tres" id="2_35b00"]
[ext_resource type="TileSet" uid="uid://bi56mq2i4t73y" path="res://rooms/dungeon_path.tres" id="3_gkjgo"]
[ext_resource type="TileSet" uid="uid://b40uurkmxf51p" path="res://rooms/dungeon_void.tres" id="4_d4575"]
[ext_resource type="PackedScene" uid="uid://4ftym1c5le2g" path="res://objects/button_fire.tscn" id="5_81k5m"]
[ext_resource type="PackedScene" uid="uid://diovs288wpi6g" path="res://objects/button_hard.tscn" id="6_mtnoc"]
[ext_resource type="PackedScene" uid="uid://c2hguu1bp1b0y" path="res://objects/spike.tscn" id="6_oo1q6"]
[ext_resource type="PackedScene" uid="uid://cfq44csco8u8u" path="res://objects/twig.tscn" id="7_qmp0b"]
[ext_resource type="AudioStream" uid="uid://bd2sbmvr60emn" path="res://assets/audio/spike_on.wav" id="9_1cylt"]
[ext_resource type="AudioStream" uid="uid://67hdb7qiceqm" path="res://assets/audio/spike_off.wav" id="10_4a1i4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_73j6q"]
size = Vector2(960, 800)

[node name="Room17" type="Node2D"]
script = ExtResource("1_as08b")
room_name = "Too Much Water"

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(5, 5)
tile_set = ExtResource("2_35b00")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 1, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 262144, 1, 327680, 327680, 0, 393216, 196608, 2, 458752, 196608, 2, 524288, 196608, 2, 1, 196608, 2, 65537, 196608, 2, 131073, 196608, 2, 196609, 196608, 2, 262145, 196608, 2, 327681, 196608, 2, 393217, 196608, 2, 458753, 196608, 2, 524289, 196608, 2, 2, 196608, 2, 65538, 196608, 2, 131074, 196608, 2, 196610, 196608, 2, 262146, 196608, 2, 327682, 196608, 2, 393218, 196608, 2, 458754, 196608, 2, 524290, 196608, 2, 3, 196608, 1, 65539, 327680, 1, 131075, 196608, 2, 196611, 196608, 2, 262147, 196608, 2, 327683, 196608, 2, 393219, 196608, 2, 458755, 196608, 2, 524291, 196608, 2, 4, 262144, 1, 65540, 327680, 0, 131076, 196608, 2, 196612, 196608, 2, 262148, 196608, 2, 327684, 196608, 2, 393220, 196608, 2, 458756, 196608, 2, 524292, 196608, 2, 131077, 196608, 2, 196613, 196608, 2, 262149, 196608, 2, 327685, 196608, 2, 393221, 196608, 2, 458757, 196608, 2, 524293, 196608, 2, 6, 196608, 1, 65542, 327680, 1, 131078, 196608, 2, 196614, 196608, 2, 262150, 196608, 2, 327686, 196608, 2, 393222, 196608, 2, 458758, 196608, 2, 524294, 196608, 2, 7, 65536, 0, 65543, 65536, 1, 131079, 196608, 2, 196615, 196608, 2, 262151, 196608, 2, 327687, 196608, 2, 393223, 196608, 2, 458759, 196608, 2, 524295, 196608, 2, 8, 65536, 0, 65544, 65536, 1, 131080, 196608, 2, 131081, 196608, 2, 131082, 196608, 2, 262154, 196608, 2, 327690, 196608, 2, 393226, 196608, 2, 458762, 196608, 2, 524298, 196608, 2, 11, 65536, 0, 65546, 65536, 1, 9, 65536, 0, 65545, 65536, 1, 10, 65536, 0, 262153, 196608, 2, 327689, 196608, 2, 393225, 196608, 2, 458761, 196608, 2, 524297, 196608, 2, 589833, 196608, 2, 5, 196608, 2, 65541, 196608, 2, 524296, 196608, 2, 458760, 196608, 2, 393224, 196608, 2, 327688, 196608, 2, 262152, 196608, 2, 196616, 196608, 2, 196617, 196608, 2, 196618, 196608, 2, 458763, 196608, 2, 65547, 65536, 1, 131083, 196608, 2, 589824, 196608, 2, 589825, 196608, 2, 589826, 196608, 2, 589827, 196608, 2, 589828, 196608, 2, 589829, 196608, 2, 589830, 196608, 2, 589831, 196608, 2, 589832, 196608, 2, 196619, 196608, 2, 262155, 196608, 2, 327691, 196608, 2, 393227, 196608, 2, 524299, 196608, 2, 589835, 196608, 2, 589834, 196608, 2, 720896, 262144, 2, 720897, 262144, 2, 720898, 262144, 2, 720899, 262144, 2, 720900, 262144, 2, 720901, 262144, 2, 720902, 262144, 2, 720903, 262144, 2, 720904, 262144, 2, 720905, 262144, 2, 720906, 262144, 2, 720907, 262144, 2)

[node name="PathMap" type="TileMap" parent="."]
scale = Vector2(5, 5)
tile_set = ExtResource("3_gkjgo")
format = 2
layer_0/tile_data = PackedInt32Array(196610, 131074, 1, 262145, 2, 2, 196609, 2, 1, 131073, 2, 1, 65537, 2, 1, 1, 2, 1, 2, 131074, 1, 65538, 131074, 1, 131074, 131074, 1, 262146, 786434, 1, 5, 196610, 2, 65541, 196610, 2, 131078, 196610, 0, 131079, 196610, 0, 131080, 196610, 0, 131081, 196610, 0, 131082, 196610, 0, 131083, 196610, 0, 131077, 327682, 2, 262147, 196610, 0, 262148, 196610, 0, 262149, 196610, 0, 262150, 196610, 0, 262151, 196610, 0, 262152, 196610, 0, 262153, 196610, 0, 262154, 196610, 0, 262155, 196610, 0, 524293, 589826, 1, 524295, 589826, 1, 524297, 589826, 1, 524289, 327682, 1, 524288, 196610, 1)

[node name="VoidMap" type="TileMap" parent="."]
scale = Vector2(5, 5)
tile_set = ExtResource("4_d4575")
format = 2
layer_0/tile_data = PackedInt32Array(589824, 65536, 0, 458752, 65536, 2, 393216, 65536, 0, 458754, 655360, 0, 458755, 65536, 1, 458756, 131072, 1, 458758, 196608, 2, 458760, 196608, 2, 524296, 196608, 2, 524294, 196608, 2, 524292, 131072, 1, 524291, 65536, 1, 524290, 0, 1, 589825, 65536, 0, 589826, 655360, 2, 589827, 65536, 1, 589828, 524288, 2, 589830, 589824, 2, 589831, 65536, 0, 589832, 589824, 2, 393218, 65536, 1, 393219, 65536, 1, 393220, 131072, 1, 393222, 196608, 2, 393224, 196608, 2, 131075, 262144, 0, 196611, 327680, 2, 196612, 196608, 0, 196613, 196608, 0, 196614, 196608, 0, 196615, 196608, 0, 196616, 196608, 0, 196618, 196608, 0, 196619, 196608, 0, 589829, 65536, 0, 393226, 0, 1, 393227, 65536, 1, 589833, 65536, 0, 458762, 0, 1, 524298, 0, 1, 589834, 655360, 2, 589835, 65536, 1, 524299, 65536, 1, 458763, 65536, 1, 655360, 65536, 1, 655361, 65536, 1, 655362, 65536, 1, 655363, 65536, 1, 655364, 65536, 1, 655365, 65536, 1, 655366, 65536, 1, 655367, 65536, 1, 655368, 65536, 1, 655369, 65536, 1, 655370, 65536, 1, 655371, 65536, 1, 196617, 196608, 0, 393217, 655360, 2, 458753, 65536, 2, 327681, 0, 0, 327682, 65536, 0, 327683, 65536, 0, 327684, 786432, 0, 327685, 196608, 0, 327686, 458752, 0, 327687, 196608, 0, 327688, 458752, 0, 327689, 196608, 0, 327690, 720896, 0, 327691, 65536, 0)

[node name="Area2D" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(480, 400)
shape = SubResource("RectangleShape2D_73j6q")
debug_color = Color(0, 0.6, 0.701961, 0)
metadata/_edit_lock_ = true

[node name="Interactibles" type="Node2D" parent="."]

[node name="Torch#171" parent="Interactibles" instance=ExtResource("5_81k5m")]
position = Vector2(440, 585)
scale = Vector2(5, 5)
target_name = Array[String](["Spike#173", "Spike#174"])

[node name="Torch#172" parent="Interactibles" instance=ExtResource("5_81k5m")]
position = Vector2(600, 585)
scale = Vector2(5, 5)
target_name = Array[String](["Spike#173", "Spike#174"])

[node name="Torch#173" parent="Interactibles" instance=ExtResource("5_81k5m")]
position = Vector2(760, 585)
scale = Vector2(5, 5)
target_name = Array[String](["Spike#173", "Spike#174"])

[node name="ButtonHard#174" parent="Interactibles" instance=ExtResource("6_mtnoc")]
position = Vector2(360, 200)
scale = Vector2(5, 5)
target_name = Array[String](["Spike#171", "Spike#172"])

[node name="Spike#171" parent="Interactibles" instance=ExtResource("6_oo1q6")]
position = Vector2(200, 200)
scale = Vector2(5, 5)
number_button = Array[int]([174])

[node name="Spike#172" parent="Interactibles" instance=ExtResource("6_oo1q6")]
position = Vector2(120, 200)
scale = Vector2(5, 5)
number_button = Array[int]([174])

[node name="Spike#173" parent="Interactibles" instance=ExtResource("6_oo1q6")]
position = Vector2(840, 360)
scale = Vector2(5, 5)
number_button = Array[int]([171, 172, 173])

[node name="Spike#174" parent="Interactibles" instance=ExtResource("6_oo1q6")]
position = Vector2(840, 200)
scale = Vector2(5, 5)
number_button = Array[int]([171, 172, 173])

[node name="Twig#1" parent="Interactibles" instance=ExtResource("7_qmp0b")]
position = Vector2(440, 505)
scale = Vector2(5, 5)
collision_layer = 3
collision_mask = 3

[node name="Twig#2" parent="Interactibles" instance=ExtResource("7_qmp0b")]
position = Vector2(760, 505)
scale = Vector2(5, 5)
collision_layer = 3
collision_mask = 3

[node name="Twig#3" parent="Interactibles" instance=ExtResource("7_qmp0b")]
position = Vector2(600, 505)
scale = Vector2(5, 5)
collision_layer = 3
collision_mask = 3

[node name="Obstacles" type="Node2D" parent="."]

[node name="RaiseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1cylt")
volume_db = -5.0

[node name="RetractSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_4a1i4")
volume_db = -5.0

[connection signal="state_changed" from="Interactibles/Spike#172" to="." method="_on_spike_172_state_changed"]
[connection signal="state_changed" from="Interactibles/Spike#174" to="." method="_on_spike_174_state_changed"]
